# Blender-Node-Copilot

./: .gitignore  LICENSE  README.md  config.yaml  generated_node.py  pyproject.toml
node_copilot/: __init__.py  addon_add_object.py  material.py  node_to_code.py
node_copilot/data/: training_data.json
node_copilot/node_shader_examples/: bark_generated.py  clear_eye.py  emission_light.py  eye_brow.py  fire_lantern_generated.py  iris_generated.py  lantern_paper_generated.py  leaves_generated.py  pine_tree_alpha_channel.py  road_texture.py  rode_lantern_generated.py  wooden_fence.py
node_copilot/prompt/: prompts_example.json
node_copilot/src/blender_ui/: __init__.py  addon_add_object.py  blender_manifest.toml  file_generator.py
node_copilot/src/code_generator/: __init__.py
node_copilot/src/data_utils/: __init__.py  data_generation.py
node_copilot/src/examples/: material.py
node_copilot/src/sft/: __init__.py  config.py  config.yaml  data_loader.py  inference.py  lora.py  process_data.py  prompt_utils.py  run.py  train.py  utils.py
