[project]
name = "node-copilot"
version = "0.0.1"
description = "An LLM-based Text-to-Code CoPilot for Blender Node Editor"
authors = [
    {name = "Mohammad Wasil Saleem"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyyaml (>=6.0.2,<7.0.0)",
    "pathlib (>=1.0.1,<2.0.0)"
]

[dependency-groups]



[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
